# BembelWithPosits

./: .zenodo.json  CMakeLists.txt  Readme.md  flake.nix
examples/: AnsatzSpace.cpp  BlockClusterTree.cpp  CMakeLists.txt  Data.hpp  Error.hpp  FullLaplaceWorkflow.cpp  Geometry.cpp  Grids.hpp  HelmholtzSingleLayerFull.cpp  HelmholtzSingleLayerH2.cpp  LaplaceSingleLayerFull.cpp  LaplaceSingleLayerH2.cpp  MaxwellSingleLayerFull.cpp  MaxwellSingleLayerH2.cpp  Quadrature.cpp  VTKDomainExport.cpp  VTKSurfaceExport.cpp
tests/: CMakeLists.txt  Test.hpp  test_DuffyTrick.cpp  test_FMMBackwardTransformation.cpp  test_FMMForwardTransformation.cpp  test_FMMTransferMatrices.cpp  test_GeometryImportAndEval.cpp  test_Glue.cpp  test_Projector.cpp  test_Spline.cpp  test_SurfacePointUpdate.cpp
tests/DuffyTrick/: test_integrate0.hpp  test_integrate1.hpp  test_integrate2.hpp  test_integrate3.hpp  test_integrate4.hpp  test_testFunctions.hpp
